Fixed: Social Alignment Issues

--- a/src/components/molecules/Socials/Socials.module.css
+++ b/src/components/molecules/Socials/Socials.module.css
@@ -19,3 +19,10 @@
     display: flex;
     gap: 1rem;
 }
+
+@media (max-width:790px) {
+.socials{
+    flex-direction: column;
+    gap: 0.5rem;
+}
+}
